# Django_Test_Project

./: Readme.md  pyproject.toml
hexlet_django_blog/: .env  db.sqlite3
hexlet_django_blog/hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/hexlet_django_blog/article/: views.py
hexlet_django_blog/hexlet_django_blog/article/templates/: articles.html
hexlet_django_blog/hexlet_django_blog/articles/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/hexlet_django_blog/articles/migrations/: 0001_initial.py  0002_articlecomment.py
hexlet_django_blog/hexlet_django_blog/templates/: base.html
hexlet_django_blog/hexlet_django_blog/templates/articles/: create.html  delete.html  index.html
